# mail-ai-agent

./: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: deploy.yaml  tests.yaml
deploy/: .env.example  Dockerfile  docker-compose.common.yml  docker-compose.yml
deploy/scripts/: ollama.entrypoint.sh  ollama.healthcheck.sh
src/: main.py
src/agent/: __init__.py
src/agent/tools/: find_emails.py  load_emails.py
src/agent/utils/: core.py
src/tools/: find_emails.py  load_emails.py
src/utils/: core.py
tests/: test_main.py
